--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "dependencies": {
     "@causa/cli": ">= 0.2.1 < 1.0.0",
-    "@causa/workspace": ">= 0.4.0 < 1.0.0"
+    "@causa/workspace": ">= 0.4.0 < 1.0.0",
+    "@google-cloud/secret-manager": "^4.2.2"
   },
   "devDependencies": {
     "@tsconfig/node18": "^2.0.1",
