--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
   },
   "dependencies": {
     "@causa/cli": ">= 0.2.1 < 1.0.0",
-    "@causa/workspace": ">= 0.4.0 < 1.0.0",
-    "@google-cloud/secret-manager": "^4.2.2"
+    "@causa/workspace": ">= 0.5.0 < 1.0.0",
+    "@causa/workspace-core": ">= 0.2.0 < 1.0.0",
+    "@google-cloud/secret-manager": "^4.2.2",
+    "@google-cloud/service-usage": "^2.2.2",
+    "class-validator": "^0.14.0"
   },
   "devDependencies": {
     "@tsconfig/node18": "^2.0.1",
@@ -40,7 +43,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
     "jest-extended": "^3.2.4",
-    "rimraf": "^5.0.0",
+    "rimraf": "^5.0.1",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
