--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "@causa/workspace-core": ">= 0.2.0 < 1.0.0",
     "@google-cloud/secret-manager": "^4.2.2",
     "@google-cloud/service-usage": "^2.2.2",
-    "class-validator": "^0.14.0"
+    "class-validator": "^0.14.0",
+    "globby": "^13.1.4"
   },
   "devDependencies": {
     "@tsconfig/node18": "^2.0.1",
