--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@causa/cli": ">= 0.3.3 < 1.0.0",
     "@causa/workspace": ">= 0.7.0 < 1.0.0",
     "@causa/workspace-core": ">= 0.3.0 < 1.0.0",
+    "@google-cloud/pubsub": "^3.6.0",
     "@google-cloud/secret-manager": "^4.2.2",
     "@google-cloud/service-usage": "^2.2.2",
     "class-validator": "^0.14.0",
