--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@tsconfig/node18": "^2.0.1",
     "@types/jest": "^29.5.1",
     "@types/node": "^18.16.14",
+    "copyfiles": "^2.4.1",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
