--- a/package.json
+++ b/package.json
@@ -32,19 +32,24 @@
     "@causa/cli": ">= 0.3.3 < 1.0.0",
     "@causa/workspace": ">= 0.7.0 < 1.0.0",
     "@causa/workspace-core": ">= 0.4.0 < 1.0.0",
+    "@google-cloud/apikeys": "^0.2.2",
     "@google-cloud/pubsub": "^3.6.0",
     "@google-cloud/secret-manager": "^4.2.2",
     "@google-cloud/service-usage": "^2.2.2",
     "@google-cloud/spanner": "^6.10.0",
     "class-validator": "^0.14.0",
+    "firebase": "^9.22.0",
+    "firebase-admin": "^11.8.0",
     "globby": "^13.1.4",
     "google-gax": "^3.6.0",
-    "googleapis": "^118.0.0"
+    "googleapis": "^118.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@tsconfig/node18": "^2.0.1",
     "@types/jest": "^29.5.1",
     "@types/node": "^18.16.14",
+    "@types/uuid": "^9.0.1",
     "copyfiles": "^2.4.1",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
