--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@causa/workspace": ">= 0.7.0 < 1.0.0",
     "@causa/workspace-core": ">= 0.4.0 < 1.0.0",
     "@google-cloud/apikeys": "^0.2.2",
+    "@google-cloud/iam-credentials": "^2.0.4",
     "@google-cloud/pubsub": "^3.6.0",
     "@google-cloud/secret-manager": "^4.2.2",
     "@google-cloud/service-usage": "^2.2.2",
