--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^18.16.16",
     "@types/uuid": "^9.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
     "copyfiles": "^2.4.1",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
