--- a/package.json
+++ b/package.json
@@ -30,38 +30,38 @@
   },
   "dependencies": {
     "@causa/cli": ">= 0.4.0 < 1.0.0",
-    "@causa/workspace": ">= 0.10.0 < 1.0.0",
-    "@causa/workspace-core": ">= 0.7.0 < 1.0.0",
+    "@causa/workspace": ">= 0.12.0 < 1.0.0",
+    "@causa/workspace-core": ">= 0.8.0 < 1.0.0",
     "@google-cloud/apikeys": "^0.2.2",
     "@google-cloud/iam-credentials": "^2.0.4",
-    "@google-cloud/pubsub": "^3.7.1",
+    "@google-cloud/pubsub": "^3.7.3",
     "@google-cloud/secret-manager": "^4.2.2",
     "@google-cloud/service-usage": "^2.2.2",
-    "@google-cloud/spanner": "^6.11.0",
-    "@google-cloud/storage": "^6.11.0",
+    "@google-cloud/spanner": "^6.14.0",
+    "@google-cloud/storage": "^6.12.0",
+    "@grpc/grpc-js": "^1.8.20",
     "class-validator": "^0.14.0",
-    "firebase": "^9.22.2",
-    "firebase-admin": "^11.9.0",
-    "globby": "^13.1.4",
-    "google-gax": "^3.6.0",
-    "googleapis": "^118.0.0",
+    "firebase": "^10.1.0",
+    "firebase-admin": "^11.10.1",
+    "globby": "^13.2.2",
+    "googleapis": "^123.0.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@tsconfig/node18": "^2.0.1",
-    "@types/jest": "^29.5.2",
-    "@types/node": "^18.16.16",
+    "@tsconfig/node18": "^18.2.0",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^18.17.1",
     "@types/uuid": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
     "copyfiles": "^2.4.1",
-    "eslint": "^8.42.0",
+    "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.5.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "jest": "^29.6.1",
     "jest-extended": "^4.0.0",
     "rimraf": "^5.0.1",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.6"
   }
 }
