--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "dependencies": {
     "@causa/cli": ">= 0.4.0 < 1.0.0",
     "@causa/workspace": ">= 0.12.0 < 1.0.0",
-    "@causa/workspace-core": ">= 0.9.0 < 1.0.0",
+    "@causa/workspace-core": ">= 0.12.0 < 1.0.0",
     "@google-cloud/apikeys": "^0.2.2",
     "@google-cloud/iam-credentials": "^2.0.4",
     "@google-cloud/pubsub": "^3.7.3",
@@ -39,7 +39,7 @@
     "@google-cloud/service-usage": "^2.2.2",
     "@google-cloud/spanner": "^6.14.0",
     "@google-cloud/storage": "^6.12.0",
-    "@grpc/grpc-js": "^1.8.21",
+    "@grpc/grpc-js": "~1.8.21",
     "class-validator": "^0.14.0",
     "firebase": "^10.1.0",
     "firebase-admin": "^11.10.1",
@@ -52,7 +52,7 @@
     "@types/jest": "^29.5.3",
     "@types/node": "^18.17.1",
     "@types/uuid": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
     "copyfiles": "^2.4.1",
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^8.9.0",
