--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@causa/workspace": ">= 0.12.0 < 1.0.0",
     "@causa/workspace-core": ">= 0.14.1 < 1.0.0",
     "@google-cloud/apikeys": "^0.2.2",
+    "@google-cloud/bigquery": "^7.1.1",
     "@google-cloud/iam-credentials": "^2.0.4",
     "@google-cloud/pubsub": "^4.0.0",
     "@google-cloud/resource-manager": "^4.3.0",
