--- a/package.json
+++ b/package.json
@@ -31,41 +31,41 @@
   "dependencies": {
     "@causa/cli": ">= 0.4.0 < 1.0.0",
     "@causa/workspace": ">= 0.12.0 < 1.0.0",
-    "@causa/workspace-core": ">= 0.14.1 < 1.0.0",
-    "@google-cloud/apikeys": "^0.2.2",
-    "@google-cloud/bigquery": "^7.1.1",
-    "@google-cloud/iam-credentials": "^2.0.4",
-    "@google-cloud/pubsub": "^4.0.0",
-    "@google-cloud/resource-manager": "^4.3.0",
-    "@google-cloud/run": "^0.6.0",
-    "@google-cloud/secret-manager": "^4.2.2",
-    "@google-cloud/service-usage": "^2.2.2",
-    "@google-cloud/spanner": "^6.15.0",
-    "@google-cloud/storage": "^7.0.0",
-    "@grpc/grpc-js": "~1.8.21",
+    "@causa/workspace-core": ">= 0.16.0 < 1.0.0",
+    "@google-cloud/apikeys": "^1.0.1",
+    "@google-cloud/bigquery": "^7.3.0",
+    "@google-cloud/iam-credentials": "^3.0.1",
+    "@google-cloud/pubsub": "^4.0.6",
+    "@google-cloud/resource-manager": "^5.0.1",
+    "@google-cloud/run": "^1.0.1",
+    "@google-cloud/secret-manager": "^5.0.1",
+    "@google-cloud/service-usage": "^3.1.0",
+    "@google-cloud/spanner": "^7.0.0",
+    "@google-cloud/storage": "^7.1.0",
+    "@grpc/grpc-js": "^1.9.4",
     "class-validator": "^0.14.0",
-    "firebase": "^10.1.0",
-    "firebase-admin": "^11.10.1",
+    "firebase": "^10.4.0",
+    "firebase-admin": "^11.11.0",
     "globby": "^13.2.2",
-    "googleapis": "^123.0.0",
-    "pino": "^8.15.0",
-    "uuid": "^9.0.0"
+    "googleapis": "^126.0.1",
+    "pino": "^8.15.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@tsconfig/node18": "^18.2.0",
-    "@types/jest": "^29.5.3",
-    "@types/node": "^18.17.2",
-    "@types/uuid": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@tsconfig/node18": "^18.2.2",
+    "@types/jest": "^29.5.5",
+    "@types/node": "^18.18.0",
+    "@types/uuid": "^9.0.4",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
     "copyfiles": "^2.4.1",
-    "eslint": "^8.46.0",
-    "eslint-config-prettier": "^8.10.0",
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.6.2",
+    "jest": "^29.7.0",
     "jest-extended": "^4.0.1",
-    "rimraf": "^5.0.1",
+    "rimraf": "^5.0.5",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.2.2"
   }
 }
