--- a/package.json
+++ b/package.json
@@ -32,43 +32,43 @@
     "@causa/cli": ">= 0.4.1 < 1.0.0",
     "@causa/workspace": ">= 0.12.1 < 1.0.0",
     "@causa/workspace-core": ">= 0.19.1 < 1.0.0",
-    "@causa/workspace-typescript": ">= 0.7.0",
-    "@google-cloud/apikeys": "^1.0.1",
-    "@google-cloud/bigquery": "^7.3.0",
-    "@google-cloud/iam-credentials": "^3.0.1",
-    "@google-cloud/pubsub": "^4.0.6",
-    "@google-cloud/resource-manager": "^5.0.1",
-    "@google-cloud/run": "^1.0.2",
-    "@google-cloud/secret-manager": "^5.0.1",
-    "@google-cloud/service-usage": "^3.1.0",
-    "@google-cloud/spanner": "^7.0.0",
-    "@google-cloud/storage": "^7.5.0",
-    "@grpc/grpc-js": "^1.9.9",
-    "class-validator": "^0.14.0",
-    "firebase": "^10.5.2",
-    "firebase-admin": "^11.11.0",
-    "globby": "^13.2.2",
-    "google-auth-library": "^9.2.0",
-    "googleapis": "^128.0.0",
-    "pino": "^8.16.1",
-    "quicktype-core": "^23.0.77",
+    "@causa/workspace-typescript": ">=0.8.2",
+    "@google-cloud/apikeys": "^1.1.0",
+    "@google-cloud/bigquery": "^7.4.0",
+    "@google-cloud/iam-credentials": "^3.1.0",
+    "@google-cloud/pubsub": "^4.3.2",
+    "@google-cloud/resource-manager": "^5.1.0",
+    "@google-cloud/run": "^1.1.0",
+    "@google-cloud/secret-manager": "^5.1.0",
+    "@google-cloud/service-usage": "^3.2.0",
+    "@google-cloud/spanner": "^7.3.0",
+    "@google-cloud/storage": "^7.7.0",
+    "class-validator": "^0.14.1",
+    "firebase": "^10.8.0",
+    "firebase-admin": "^12.0.0",
+    "globby": "^14.0.1",
+    "google-auth-library": "^9.6.3",
+    "google-gax": "4.3.0",
+    "googleapis": "^133.0.0",
+    "pino": "^8.19.0",
+    "quicktype-core": "^23.0.104",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
-    "@types/jest": "^29.5.7",
-    "@types/node": "^18.18.8",
-    "@types/uuid": "^9.0.6",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^18.19.17",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
     "copyfiles": "^2.4.1",
-    "eslint": "^8.52.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
     "jest-extended": "^4.0.2",
     "rimraf": "^5.0.5",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
