🔧 Ensure google-gax is not automatically updated

--- a/causa.yaml
+++ b/causa.yaml
@@ -19,3 +19,5 @@ javascript:
     update:
       packageTargets:
         '@types/node': minor
+        # `google-gax` should only be manually updated to always match the Spanner client's version.
+        google-gax: semver
