--- a/package.json
+++ b/package.json
@@ -29,46 +29,46 @@
     "test:cov": "npm run test -- --coverage"
   },
   "dependencies": {
-    "@causa/cli": ">= 0.4.1 < 1.0.0",
-    "@causa/workspace": ">= 0.12.1 < 1.0.0",
-    "@causa/workspace-core": ">= 0.19.1 < 1.0.0",
-    "@causa/workspace-typescript": ">=0.8.2",
-    "@google-cloud/apikeys": "^1.1.0",
-    "@google-cloud/bigquery": "^7.4.0",
-    "@google-cloud/iam-credentials": "^3.1.0",
-    "@google-cloud/pubsub": "^4.3.2",
-    "@google-cloud/resource-manager": "^5.1.0",
-    "@google-cloud/run": "^1.1.0",
-    "@google-cloud/secret-manager": "^5.1.0",
-    "@google-cloud/service-usage": "^3.2.0",
-    "@google-cloud/spanner": "7.4.0",
-    "@google-cloud/storage": "^7.7.0",
+    "@causa/cli": ">= 0.5.0 < 1.0.0",
+    "@causa/workspace": ">= 0.13.0 < 1.0.0",
+    "@causa/workspace-core": ">= 0.20.0 < 1.0.0",
+    "@causa/workspace-typescript": ">= 0.9.0 < 1.0.0",
+    "@google-cloud/apikeys": "^1.2.0",
+    "@google-cloud/bigquery": "^7.7.0",
+    "@google-cloud/iam-credentials": "^3.2.0",
+    "@google-cloud/pubsub": "^4.4.0",
+    "@google-cloud/resource-manager": "^5.2.0",
+    "@google-cloud/run": "^1.2.0",
+    "@google-cloud/secret-manager": "~5.3.0",
+    "@google-cloud/service-usage": "^3.3.0",
+    "@google-cloud/spanner": "7.7.0",
+    "@google-cloud/storage": "^7.11.0",
     "class-validator": "^0.14.1",
-    "firebase": "^10.8.0",
-    "firebase-admin": "^12.0.0",
+    "firebase": "^10.12.1",
+    "firebase-admin": "^12.1.0",
     "globby": "^14.0.1",
-    "google-auth-library": "^9.6.3",
-    "google-gax": "4.3.1",
-    "googleapis": "^133.0.0",
-    "pino": "^8.19.0",
-    "quicktype-core": "^23.0.104",
+    "google-auth-library": "^9.10.0",
+    "google-gax": "4.3.2",
+    "googleapis": "^137.1.0",
+    "pino": "^9.1.0",
+    "quicktype-core": "^23.0.168",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@tsconfig/node18": "^18.2.2",
+    "@tsconfig/node18": "^18.2.4",
     "@types/jest": "^29.5.12",
-    "@types/node": "^18.19.18",
+    "@types/node": "^18.19.33",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/eslint-plugin": "^7.10.0",
     "copyfiles": "^2.4.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
     "jest-extended": "^4.0.2",
-    "rimraf": "^5.0.5",
-    "ts-jest": "^29.1.2",
+    "rimraf": "^5.0.7",
+    "ts-jest": "^29.1.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.5"
   }
 }
