🔧 Set allowed eslint version upgrades

--- a/causa.yaml
+++ b/causa.yaml
@@ -21,3 +21,6 @@ javascript:
         '@types/node': minor
         # `google-gax` should only be manually updated to always match the Spanner client's version.
         google-gax: semver
+        # `@typescript-eslint/eslint-plugin` is not yet compatible with ESLint 9.
+        # https://github.com/typescript-eslint/typescript-eslint/issues/8211
+        eslint: minor
