--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "@types/jest": "^29.5.13",
     "@types/node": "^18.19.55",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.8.1",
     "copyfiles": "^2.4.1",
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
@@ -70,6 +69,7 @@
     "jest-extended": "^4.0.2",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.8.1"
   }
 }
