--- a/package.json
+++ b/package.json
@@ -34,42 +34,42 @@
     "@causa/workspace-core": ">= 0.22.3 < 1.0.0",
     "@causa/workspace-typescript": ">= 0.10.2 < 1.0.0",
     "@google-cloud/apikeys": "^2.1.0",
-    "@google-cloud/bigquery": "^8.0.0",
-    "@google-cloud/iam-credentials": "^4.0.1",
-    "@google-cloud/pubsub": "^5.0.0",
-    "@google-cloud/resource-manager": "^6.0.1",
-    "@google-cloud/run": "^2.0.1",
+    "@google-cloud/bigquery": "^8.1.0",
+    "@google-cloud/iam-credentials": "^4.1.0",
+    "@google-cloud/pubsub": "^5.1.0",
+    "@google-cloud/resource-manager": "^6.1.0",
+    "@google-cloud/run": "^2.1.0",
     "@google-cloud/secret-manager": "^6.0.1",
     "@google-cloud/service-usage": "^4.1.0",
-    "@google-cloud/spanner": "7.21.0",
+    "@google-cloud/spanner": "8.0.0",
     "@google-cloud/storage": "^7.16.0",
     "class-validator": "^0.14.2",
-    "firebase": "^11.7.1",
-    "firebase-admin": "^13.3.0",
+    "firebase": "^11.9.1",
+    "firebase-admin": "^13.4.0",
     "globby": "^14.1.0",
-    "google-auth-library": "^9.15.1",
-    "google-gax": "4.4.1",
-    "googleapis": "^148.0.0",
-    "pino": "^9.6.0",
-    "quicktype-core": "^23.1.4",
+    "google-auth-library": "^10.1.0",
+    "google-gax": "5.0.1-rc.1",
+    "googleapis": "^150.0.1",
+    "pino": "^9.7.0",
+    "quicktype-core": "^23.2.6",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@swc/core": "^1.11.24",
+    "@swc/core": "^1.12.1",
     "@swc/jest": "^0.2.38",
-    "@tsconfig/node20": "^20.1.5",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^18.19.100",
+    "@tsconfig/node20": "^20.1.6",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^18.19.112",
     "@types/uuid": "^10.0.0",
     "copyfiles": "^2.4.1",
-    "eslint": "^9.26.0",
+    "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-prettier": "^5.4.0",
-    "jest": "^29.7.0",
-    "jest-extended": "^4.0.2",
+    "eslint-plugin-prettier": "^5.5.0",
+    "jest": "^30.0.0",
+    "jest-extended": "^6.0.0",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.0"
+    "typescript-eslint": "^8.34.1"
   }
 }
