--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "google-auth-library": "^10.2.1",
     "google-gax": "5.0.1-rc.1",
     "googleapis": "^155.0.0",
+    "micromatch": "^4.0.8",
     "pino": "^9.7.0",
     "quicktype-core": "^23.2.6",
     "uuid": "^11.1.0"
@@ -62,6 +63,7 @@
     "@swc/jest": "^0.2.39",
     "@tsconfig/node20": "^20.1.6",
     "@types/jest": "^30.0.0",
+    "@types/micromatch": "^4.0.9",
     "@types/node": "^22.17.0",
     "@types/uuid": "^10.0.0",
     "copyfiles": "^2.4.1",
