🔧 Fix repository in package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "@causa/workspace-google",
   "version": "0.9.4",
   "description": "The Causa workspace module providing many functionalities related to GCP and its services.",
-  "repository": "github:causa-io/workspace-module-google",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/causa-io/workspace-module-google.git"
+  },
   "license": "ISC",
   "type": "module",
   "engines": {
