--- a/package.json
+++ b/package.json
@@ -34,47 +34,47 @@
   "dependencies": {
     "@causa/cli": ">= 0.6.2 < 1.0.0",
     "@causa/workspace": ">= 0.18.0 < 1.0.0",
-    "@causa/workspace-core": ">= 0.23.0 < 1.0.0",
+    "@causa/workspace-core": ">= 0.24.0 < 1.0.0",
     "@causa/workspace-typescript": ">= 0.11.0 < 1.0.0",
     "@google-cloud/apikeys": "^2.2.0",
     "@google-cloud/bigquery": "^8.1.1",
     "@google-cloud/iam-credentials": "^4.2.0",
-    "@google-cloud/pubsub": "^5.1.0",
+    "@google-cloud/pubsub": "^5.2.0",
     "@google-cloud/resource-manager": "^6.2.0",
-    "@google-cloud/run": "^2.3.0",
+    "@google-cloud/run": "^3.0.0",
     "@google-cloud/secret-manager": "^6.1.0",
     "@google-cloud/service-usage": "^4.2.0",
-    "@google-cloud/spanner": "8.1.0",
-    "@google-cloud/storage": "^7.16.0",
+    "@google-cloud/spanner": "8.2.0",
+    "@google-cloud/storage": "^7.17.0",
     "class-validator": "^0.14.2",
-    "firebase": "^12.0.0",
+    "firebase": "^12.1.0",
     "firebase-admin": "^13.4.0",
     "globby": "^14.1.0",
-    "google-auth-library": "^10.2.1",
-    "google-gax": "5.0.1-rc.1",
-    "googleapis": "^155.0.0",
+    "google-auth-library": "^10.3.0",
+    "google-gax": "5.0.1",
+    "googleapis": "^158.0.0",
     "micromatch": "^4.0.8",
-    "pino": "^9.7.0",
+    "pino": "^9.9.0",
     "quicktype-core": "^23.2.6",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@swc/core": "^1.13.3",
+    "@swc/core": "^1.13.5",
     "@swc/jest": "^0.2.39",
     "@tsconfig/node20": "^20.1.6",
     "@types/jest": "^30.0.0",
     "@types/micromatch": "^4.0.9",
-    "@types/node": "^22.17.0",
+    "@types/node": "^22.18.0",
     "@types/uuid": "^10.0.0",
     "copyfiles": "^2.4.1",
-    "eslint": "^9.32.0",
+    "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.3",
-    "jest": "^30.0.5",
+    "eslint-plugin-prettier": "^5.5.4",
+    "jest": "^30.1.0",
     "jest-extended": "^6.0.0",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.39.0"
+    "typescript-eslint": "^8.41.0"
   }
 }
