--- a/package.json
+++ b/package.json
@@ -55,8 +55,7 @@
     "googleapis": "^164.0.0",
     "micromatch": "^4.0.8",
     "pino": "^10.1.0",
-    "quicktype-core": "^23.2.6",
-    "uuid": "^13.0.0"
+    "quicktype-core": "^23.2.6"
   },
   "devDependencies": {
     "@swc/core": "^1.13.5",
@@ -65,7 +64,6 @@
     "@types/jest": "^30.0.0",
     "@types/micromatch": "^4.0.9",
     "@types/node": "^22.18.11",
-    "@types/uuid": "^11.0.0",
     "copyfiles": "^2.4.1",
     "eslint": "^9.38.0",
     "eslint-config-prettier": "^10.1.8",
