--- a/package.json
+++ b/package.json
@@ -34,36 +34,36 @@
   "dependencies": {
     "@causa/cli": ">= 0.6.4 < 1.0.0",
     "@causa/workspace": ">= 0.19.1 < 1.0.0",
-    "@causa/workspace-core": ">= 0.25.2 < 1.0.0",
-    "@causa/workspace-typescript": ">= 0.15.2 < 1.0.0",
+    "@causa/workspace-core": ">= 0.26.0 < 1.0.0",
+    "@causa/workspace-typescript": ">= 0.16.0 < 1.0.0",
     "@google-cloud/apikeys": "^2.2.1",
     "@google-cloud/bigquery": "^8.1.1",
     "@google-cloud/iam-credentials": "^4.2.1",
     "@google-cloud/pubsub": "^5.2.2",
     "@google-cloud/resource-manager": "^6.2.1",
-    "@google-cloud/run": "^3.1.0",
+    "@google-cloud/run": "^3.2.0",
     "@google-cloud/secret-manager": "^6.1.1",
     "@google-cloud/service-usage": "^4.2.1",
-    "@google-cloud/spanner": "8.4.0",
+    "@google-cloud/spanner": "^8.6.0",
     "@google-cloud/storage": "^7.18.0",
     "class-validator": "^0.14.3",
-    "firebase": "^12.7.0",
+    "firebase": "^12.8.0",
     "firebase-admin": "^13.6.0",
     "globby": "^16.1.0",
     "google-auth-library": "^10.5.0",
-    "google-gax": "5.0.3",
-    "googleapis": "^170.0.0",
+    "google-gax": "5.0.6",
+    "googleapis": "^171.2.0",
     "micromatch": "^4.0.8",
-    "pino": "^10.2.0",
+    "pino": "^10.3.0",
     "quicktype-core": "^23.2.6"
   },
   "devDependencies": {
-    "@swc/core": "^1.15.8",
+    "@swc/core": "^1.15.11",
     "@swc/jest": "^0.2.39",
-    "@tsconfig/node20": "^20.1.8",
+    "@tsconfig/node20": "^20.1.9",
     "@types/jest": "^30.0.0",
     "@types/micromatch": "^4.0.10",
-    "@types/node": "^22.19.6",
+    "@types/node": "^22.19.8",
     "copyfiles": "^2.4.1",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
@@ -73,6 +73,6 @@
     "rimraf": "^6.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.53.0"
+    "typescript-eslint": "^8.54.0"
   }
 }
